[package]
name = "dumbpipe"
version = "0.33.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["netcat", "cli", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/n0-computer/dumbpipe"
description = "A cli tool to pipe data over the network, with NAT hole punching"
readme = "README.md"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.81"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
hex = "0.4.3"
iroh = { version = "0.95", default-features = false }
iroh-tickets = { version = "0.2" }
quinn = { version = "0.14", package = "iroh-quinn" }
rand = "0.9.2"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
data-encoding = "2.9.0"
n0-error = "0.1"

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.29", features = ["signal", "process"] }
tempfile = "3.8"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true

[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh", branch = "feat-multipath" }
iroh-base = { git = "https://github.com/n0-computer/iroh", branch = "feat-multipath" }
iroh-tickets = { git = "https://github.com/n0-computer/iroh-tickets", branch = "feat-multipath" }
iroh-quinn = { git = "https://github.com/n0-computer/quinn", branch = "main-iroh" }
iroh-quinn-udp = { git = "https://github.com/n0-computer/quinn", branch = "main-iroh" }
