[package]
name = "dumbpipe"
version = "0.36.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["netcat", "cli", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/n0-computer/dumbpipe"
description = "A cli tool to pipe data over the network, with NAT hole punching"
readme = "README.md"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.91"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
hex = "0.4.3"
iroh = { version = "=1.0.0-rc.0", default-features = false, features = ["tls-ring"] }
iroh-tickets = "=1.0.0-rc.0"
noq = "=1.0.0-rc.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
data-encoding = "2.9.0"
n0-error = "=1.0.0-rc.0"

[dev-dependencies]
duct = "1.1.1"
nix = { version = "0.31", features = ["signal", "process"] }
rand = "0.10"
tempfile = "3.8"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true
